@@ -7,18 +7,27 @@ import net.sourceforge.pmd.lang.ast.AbstractNode;
 
 import org.mozilla.javascript.ast.AstNode;
 
-public abstract class AbstractEcmascriptNode<T extends AstNode> extends AbstractNode implements EcmascriptNode {
+public abstract class AbstractEcmascriptNode<T extends AstNode> extends AbstractNode implements EcmascriptNode<T> {
 
     protected final T node;
 
     public AbstractEcmascriptNode(T node) {
 	super(node.getType());
 	this.node = node;
-	this.beginLine = node.getLineno() + 1;
-	this.beginLine = node.getLineno() + 1;
-	// TODO Implement positions, or figure out how to do begin/end lines/column
-	//this.beginPosition = node.getAbsolutePosition();
-	//this.endPosition = this.beginPosition + node.getLength();
+    }
+
+    /* package private */
+    void calculateLineNumbers(SourceCodePositioner positioner) {
+	int startOffset = node.getAbsolutePosition();
+	int endOffset = startOffset + node.getLength();
+
+	this.beginLine = positioner.lineNumberFromOffset(startOffset);
+	this.beginColumn = positioner.columnFromOffset(startOffset);
+	this.endLine = positioner.lineNumberFromOffset(endOffset);
+	this.endColumn = positioner.columnFromOffset(endOffset) - 1; // end column is inclusive
+	if (this.endColumn < 0) {
+	    this.endColumn = 0;
+	}
     }
 
     /**
@@ -34,7 +43,9 @@ public abstract class AbstractEcmascriptNode<T extends AstNode> extends Abstract
     public Object childrenAccept(EcmascriptParserVisitor visitor, Object data) {
 	if (children != null) {
 	    for (int i = 0; i < children.length; ++i) {
-		((EcmascriptNode) children[i]).jjtAccept(visitor, data);
+		@SuppressWarnings("unchecked") // we know that the children here are all EcmascriptNodes
+		EcmascriptNode<T> ecmascriptNode = (EcmascriptNode<T>) children[i];
+		ecmascriptNode.jjtAccept(visitor, data);
 	    }
 	}
 	return data;
@@ -50,11 +61,6 @@ public abstract class AbstractEcmascriptNode<T extends AstNode> extends Abstract
 
     public boolean hasSideEffects() {
 	return node.hasSideEffects();
-    }
-
-    @Override
-    public int getBeginColumn() {
-	return -1;
     }
 
     @Override
